Fix for displaying nav subitems on small devices

--- a/arches/app/media/css/arches.scss
+++ b/arches/app/media/css/arches.scss
@@ -6594,10 +6594,6 @@ th.notif-type {
             font-size: 17px;
         }
 
-        .expanded-nav{
-            display: none;
-        }
-
         .list-header{
             font-size: 19px;
         }
